--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
-div.top-part {
+#top-part {
     display: flex;
+    flex-direction: column;
+    align-items: start;
     justify-content: center;
-    border: solid 1px red;
+    margin-top: 1em;
 }
