--- a/index.css
+++ b/index.css
@@ -1,3 +1,15 @@
+[data-theme="light"],
+:root:not([data-theme="dark"]) {
+  --pico-primary: #058686;
+  --pico-primary-hover: #0AC2C2;
+}
+
+[data-theme="dark"],
+:root:not([data-theme="light"]) {
+  --pico-primary: #0AC2C2;
+  --pico-primary-hover: #58faf9;
+}
+
 #avatar {
     max-height: 500px;
 }
@@ -12,7 +24,12 @@
 a {
     text-decoration: none;
 }
+
+
 /* twitch */
+i {
+    transition: color 100ms linear;
+}
 i.bi-twitch:hover {
     color: #6441a5;
 }
@@ -34,15 +51,7 @@ section{
     flex-direction: column;
     align-items: center;
 }
-[data-theme="light"],
-:root:not([data-theme="dark"]) {
-  --pico-primary: #058686;
-}
 
-[data-theme="dark"],
-:root:not([data-theme="light"]) {
-  --pico-primary: #0AC2C2;
-}
 
 @media (prefers-color-scheme: light) {
     #stellaris-logo {
